fix: fix auth pages alignment

--- a/src/pages/Auth/Auth.module.css
+++ b/src/pages/Auth/Auth.module.css
@@ -21,7 +21,8 @@
   grid-template-columns: 500px 500px;
   align-items: center;
   justify-content: space-around;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: auto;
 }
 
